--- a/WindowsFormsCalculator.csproj
+++ b/WindowsFormsCalculator.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formulas.cs" />
     <Compile Include="Output.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
